OO-4186: Move assessment methods from generic course node to a new service